New Bevel shader darkens transparent materials #53313

Closed
opened 2017-11-13 17:34:21 +01:00 by Steffen Dünner · 7 comments

System Information
Win10 x64, nVidia GTX 1080Ti

Blender Version
Broken: Current builds (since the addition of Brecht's new bevel shader)
Worked: none so far

Short description of error
Adding Brecht's awesome new Bevel shader to transparent materials makes them render a lot darker.
The darkening becomes more prominent the more samples you use in the Bevel shader.

Exact steps for others to reproduce the error

  • Open this blend file: Bevel_Transparency_v01.blend
    It's just a simple cylinder with a thin wall and a Principled shader with transparency and a constant white environment.
  • Render
  • This is the result:
    Trans_1.png
  • Go to the cylinders material and plug in the Bevel shader. Render again.
  • Now you get this result:
    Trans_2.png
  • If you set the samples in the Bevel shader to something like 16 the cylinder becomes completely opaque.
**System Information** Win10 x64, nVidia GTX 1080Ti **Blender Version** Broken: Current builds (since the addition of Brecht's new bevel shader) Worked: none so far **Short description of error** Adding Brecht's awesome new Bevel shader to transparent materials makes them render a lot darker. The darkening becomes more prominent the more samples you use in the Bevel shader. **Exact steps for others to reproduce the error** - Open this blend file: [Bevel_Transparency_v01.blend](https://archive.blender.org/developer/F1132077/Bevel_Transparency_v01.blend) It's just a simple cylinder with a thin wall and a Principled shader with transparency and a constant white environment. - Render - This is the result: ![Trans_1.png](https://archive.blender.org/developer/F1132081/Trans_1.png) - Go to the cylinders material and plug in the Bevel shader. Render again. - Now you get this result: ![Trans_2.png](https://archive.blender.org/developer/F1132085/Trans_2.png) - If you set the samples in the Bevel shader to something like 16 the cylinder becomes completely opaque.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo
Brecht Van Lommel was assigned by Joel Godin 2017-11-14 03:13:53 +01:00

True.
If you set IOR to 1.0, it turns black.

True. If you set IOR to 1.0, it turns black.

This issue was referenced by blender/cycles@4e935b2528

This issue was referenced by blender/cycles@4e935b252867cbbd5e56722b5fcf790b81fe5461

This issue was referenced by d77f1d6538

This issue was referenced by d77f1d65380d9c3a80aafcccb3b59891bd56f63b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53313
No description provided.