Fix T53313: bevel shader with transmission render artifacts.